# ente-maestro-tests

./: .gitignore  README.md
.github/scripts/: run-auth-museum-tests.sh  run-auth-online-tests.sh
.github/workflows/: auth-android-museum.yml  auth-android-online.yml  auth-android-smoke.yml
docs/: auth-test-rollout.md
maestro/auth/offline/: bulk-permanent-delete.yaml  bulk-pin-edit.yaml  bulk-tag-edit.yaml  bulk-tag-remove.yaml  bulk-trash-restore.yaml  code-lifecycle.yaml  duplicate-codes.yaml  home-organization.yaml  imports.yaml  local-backup.yaml  manual-setup.yaml  manual-validation.yaml  plain-text-import.yaml  settings.yaml  tags.yaml  trash-restore.yaml
maestro/auth/online/: museum-signup-recovery-login.yaml  museum-unknown-login.yaml  password-login.yaml  prepared-basic-login.yaml  prepared-bulk-mutation-complete.yaml  prepared-bulk-mutation-start.yaml  prepared-password-login.yaml  prepared-recovery-password-reset.yaml  (+4 more)
museum/: compose.yaml  museum.yaml
museum/fixtures/: README.md  auth-fixture-v1.dump  auth-fixture-v1.sha256  auth-fixture-v2.dump  auth-fixture-v2.sha256  manifest.json  public-test-credentials.json
scripts/: current-totp.mjs  download-auth-nightly.sh  resolve-auth-nightly.sh  run-auth-android-local.sh  select-auth-ci-suites.sh  select-auth-online-lanes.sh  test-select-auth-ci-suites.sh  test-select-auth-online-lanes.sh  verify-local-auth-backups.sh
scripts/fixtures/: generate-auth-fixture.sh  restore-auth-fixture.sh  verify-auth-fixture.sh
tools/auth-fixture-generator/: Cargo.toml
tools/auth-fixture-generator/src/: main.rs
(+14 files in other folders)
