[package]
name = "auth-fixture-generator"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
ente-accounts = { git = "https://github.com/ente-io/ente.git", rev = "fd4988b6cea005576ea293dd32add131b89dd66c" }
ente-core = { git = "https://github.com/ente-io/ente.git", rev = "fd4988b6cea005576ea293dd32add131b89dd66c" }
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zeroize = "1.8"
